--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "remult": "^0.13.22",
+    "todomvc-app-css": "^2.4.2",
+    "todomvc-common": "^1.0.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
