--- a/db/tasks.json
+++ b/db/tasks.json
@@ -1,27 +1,32 @@
 [
   {
-    "id": "94056f0b-c8b4-4c3f-af4d-ed6176bfd46b",
+    "id": "d6b36699-5bc2-426a-a4da-467dd4fcc18f",
     "title": "Task a",
     "completed": false
   },
   {
-    "id": "7174d87e-d447-44f3-ae9d-62381e3d9546",
+    "id": "c85fbaaf-76bd-46cb-a8a0-a581db2f5f4b",
     "title": "Task b",
-    "completed": true
+    "completed": false
   },
   {
-    "id": "0c5698d6-50d5-4448-a815-7d471fff4068",
+    "id": "73290092-cdd3-4e90-92ce-1b89134ae4f0",
     "title": "Task c",
     "completed": false
   },
   {
-    "id": "afbdea30-d334-46c2-98cc-3bef1d524a86",
+    "id": "09fc7d8f-6673-4238-bb60-9f258a292c53",
     "title": "Task d",
     "completed": false
   },
   {
-    "id": "a0562117-32aa-4b0d-bc98-5bb0f0d608d4",
+    "id": "eb7c2918-5043-46be-8519-07e9ba85c391",
     "title": "Task e",
-    "completed": true
+    "completed": false
+  },
+  {
+    "id": "6a192be8-ce59-42e6-ad3f-bcdd636e94d5",
+    "title": "Task f",
+    "completed": false
   }
 ]
